# simple-opencl-programs

./: .gitmodules  CMakeLists.txt  README
src/: CMakeLists.txt
src/libclprobe/: CMakeLists.txt  clprobe.cpp  clprobe.h
src/platform_probe/: CMakeLists.txt  platform_probe.c  platform_probe.cpp
src/prefix_sum/: CMakeLists.txt  naive_prefix_sum.cl  prefix_sum.cpp
src/run_kernels/: CMakeLists.txt  add.cl  dot_product.cl  run_kernel.c  run_kernel.cpp
